kubernetes/velero/base/node-agent.yaml
---
# Source: velero/templates/node-agent-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-agent
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
  namespace: velero
  labels:
    app.kubernetes.io/name: velero
    app.kubernetes.io/instance: velero
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: velero-11.2.0
spec:
  selector:
    matchLabels:
      name: node-agent
  template:
    metadata:
      labels:
        name: node-agent
        role: node-agent
        app.kubernetes.io/name: velero
        app.kubernetes.io/instance: velero
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: velero-11.2.0
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8085"
        prometheus.io/scrape: "true"
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: velero-server
      automountServiceAccountToken: true
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 3600
      volumes:
        - name: cloud-credentials
          secret:
            secretName: velero
        - name: host-pods
          hostPath:
            path: /var/lib/kubelet/pods
        - name: host-plugins
          hostPath:
            path: /var/lib/kubelet/plugins
        - name: scratch
          emptyDir: {}
      dnsPolicy: ClusterFirst
      containers:
        - name: node-agent
          image: "docker.io/velero/velero:v1.17.1@sha256:58f551f0d89a9ef1919771bdc7475c08bc1795a50a51a57b5f14316d68fc3baa"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http-monitoring
              containerPort: 8085
          command:
            - /velero
          args:
            - node-agent
            - server
          volumeMounts:
            - name: cloud-credentials
              mountPath: /credentials
            - name: host-pods
              mountPath: /host_pods
              mountPropagation: HostToContainer
            - name: host-plugins
              mountPath: /host_plugins
              mountPropagation: HostToContainer
            - name: scratch
              mountPath: /scratch
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 5m
              memory: 128Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
      enableServiceLinks: false
